--- a/.gitignore
+++ b/.gitignore
@@ -1,68 +1,41 @@
-# Dependencies
-node_modules/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
 /.pnp
-.pnp.js
-venv/
-env/
-__pycache__/
-*.py[cod]
-*$py.class
-.Python
-pip-log.txt
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
-# Testing
+# testing
 /coverage
-.pytest_cache/
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
 
-# Production
+# next.js
+/.next/
+/out/
+
+# production
 /build
-/dist
-*.egg-info/
 
-# Development
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
+# misc
 .DS_Store
+*.pem
 
-# Logs
-logs
-*.log
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
+# env files (can opt-in for committing if needed)
+.env*
 
-# Frontend specific
-.next/
-out/
-.nuxt/
-dist/
+# vercel
+.vercel
 
-# Backend specific
-*.sqlite3
-.pytest_cache/
-celerybeat-schedule
-*.sage.py
-
-# Misc
-.DS_Store
-Thumbs.db
+# typescript
+*.tsbuildinfo
+next-env.d.ts
