--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@langchain/community": "^0.3.30",
     "@langchain/core": "^0.3.40",
     "@langchain/langgraph": "^0.2.46",
+    "@langchain/mistralai": "^0.2.0",
     "@langchain/openai": "^0.4.4",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
