--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@langchain/openai": "^0.4.4",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "ai": "^4.1.41",
     "class-variance-authority": "^0.7.1",
