--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.15.1",
     "recharts": "^2.15.1",
     "sentiment": "^5.0.2",
     "tailwind-merge": "^3.0.1",
