--- a/package.json
+++ b/package.json
@@ -19,17 +19,20 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
+    "@types/mapbox-gl": "^3.4.1",
     "ai": "^4.1.41",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.3",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.475.0",
+    "mapbox-gl": "^3.10.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.15.1",
+    "react-mapbox-gl": "^5.1.1",
     "recharts": "^2.15.1",
     "sentiment": "^5.0.2",
     "tailwind-merge": "^3.0.1",
