--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@langchain/langgraph": "^0.2.46",
     "@langchain/mistralai": "^0.2.0",
     "@langchain/openai": "^0.4.4",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
@@ -32,7 +33,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.15.1",
-    "react-mapbox-gl": "^5.1.1",
+    "react-map-gl": "^8.0.1",
     "recharts": "^2.15.1",
     "sentiment": "^5.0.2",
     "tailwind-merge": "^3.0.1",
