--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@langchain/openai": "^0.4.4",
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-select": "^2.1.6",
