--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.15.1",
-    "react-mapbox-gl": "^5.1.1",
+    "react-map-gl": "^8.0.1",
     "recharts": "^2.15.1",
     "sentiment": "^5.0.2",
     "tailwind-merge": "^3.0.1",
