--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.1.11",
+    "@ai-sdk/perplexity": "^1.0.0",
     "@hookform/resolvers": "^4.1.0",
     "@langchain/community": "^0.3.30",
     "@langchain/core": "^0.3.40",
@@ -34,6 +35,7 @@
     "lucide-react": "^0.475.0",
     "mapbox-gl": "^3.10.0",
     "next": "15.1.7",
+    "openai": "^4.85.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
